Aug06: Added some more plots

--- a/Report.tex
+++ b/Report.tex
@@ -22,6 +22,7 @@
 
 
     \pagebreak
+    \part*{Appendix}
     \appendix
     \import{./res/Sections}{Appendix.tex}
     %\import{./res/Sections}{Test.tex} %testing, of course!
