--- a/res/Sections/Analysis/Analysis_ttH.tex
+++ b/res/Sections/Analysis/Analysis_ttH.tex
@@ -42,7 +42,7 @@ The entire process involved a lot of trail and error, as the code that was provi
         \label{tthPreFitYields}
     \end{table}
 
-    Now that the selection and weighting criteria have been established, we can apply it and run TRExFitter to determine yields. Table~\ref{tthPreFitYields} shows these. We can also produce some simple distributions for the regions we want to examine, such at the tau $p_T$ or the leading lepton $p_T$. Those plots are given in Figure~\ref{tauAndLeadingLepPt}. Some more of the 
+    Now that the selection and weighting criteria have been established, we can apply it and run TRExFitter to determine yields. Table~\ref{tthPreFitYields} shows these. We can also produce some simple distributions for the regions we want to examine, such at the tau $p_T$ or the leading lepton $p_T$. Those plots are given in Figure~\ref{tauAndLeadingLepPt}. Some additional plots are also given in Section~\ref{additionalValidationPlots}
 
     \import{./res/Figures}{tauAndLeadingLepPt.tex}
 
