--- a/res/Sections/Appendix.tex
+++ b/res/Sections/Appendix.tex
@@ -20,6 +20,11 @@
 
 
 \pagebreak
+\section{Additional Region Plots}
+    \import{./res/Figures}{additionalValidationPlots.tex}
+
+
+\pagebreak
 \section{Rel.21 Branches Missing/Renamed from Rel.22}\label{MissingBranches}
 \subsection{Pre-Selection Criteria}\label{preselectMissingFeatures}
     \begin{multicols}{2}
